--- a/GCFImpromptuApp/res/layout/activity_snap_to_it.xml
+++ b/GCFImpromptuApp/res/layout/activity_snap_to_it.xml
@@ -118,6 +118,7 @@
 	        
 	        <!-- Onboarding Tool -->
 	        <LinearLayout
+	            android:id="@+id/layoutOnboard"
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
 		        android:visibility="gone"
