--- a/GCFImpromptuApp/res/layout/app_info_single.xml
+++ b/GCFImpromptuApp/res/layout/app_info_single.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
+    android:paddingTop="5dp"
     android:paddingLeft="10dp"
     android:background="@drawable/corner"
     android:paddingRight="10dp">
@@ -15,6 +15,18 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
         android:background="#EEEEEE"
+        android:orientation="vertical" >
+    </ImageView>
+    
+    <ImageView
+        android:id="@+id/imgClose"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/hide_app"
+        android:visibility="gone"
         android:orientation="vertical" >
     </ImageView>
     
