--- a/GCFImpromptuApp/res/layout/dialog_app_alert.xml
+++ b/GCFImpromptuApp/res/layout/dialog_app_alert.xml
@@ -25,7 +25,7 @@
 	<LinearLayout 
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content" 
-    	android:orientation="vertical"
+    	android:orientation="horizontal"
     	android:layout_marginTop="10dp"
     	android:padding="5dp">
     	
@@ -44,6 +44,26 @@
 	            android:layout_height="wrap_content"
 	            android:gravity="center"
 	            android:text="RUN"
+	            android:textColor="#FFFFFF"
+	            android:textSize="12sp" />
+	    </LinearLayout>
+	    
+	    <!-- Button for Running the Application -->
+	    <LinearLayout
+	        android:id="@+id/btnReport"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:background="#993333"
+	    	android:minWidth="100dp"
+	    	android:layout_marginLeft="5dp"
+	    	android:padding="10dp"
+	        android:layout_gravity="right"
+	        android:orientation="vertical">
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:gravity="center"
+	            android:text="REPORT APP"
 	            android:textColor="#FFFFFF"
 	            android:textSize="12sp" />
 	    </LinearLayout>
