--- a/GCFImpromptuApp/res/menu/main.xml
+++ b/GCFImpromptuApp/res/menu/main.xml
@@ -7,6 +7,12 @@
         android:title="@string/action_refresh"/>
     
     <item
+        android:id="@+id/action_permissions"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="@string/title_permissions"/>
+    
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
@@ -23,11 +29,5 @@
         android:orderInCategory="300"
         android:showAsAction="never"
         android:title="@string/title_activity_quit"/>
-    
-<!-- 	<item
-        android:id="@+id/action_experiment"
-        android:orderInCategory="400"
-        android:showAsAction="ifRoom"
-        android:title="Experimental"/> -->
-    
+        
 </menu>
